# moviepediafilms.com

./: .env  .env.development  .env.prod  .env.production  .env.uat  .gitignore  Dockerfile  Makefile  README.md  deploy  package-lock.json  package.json  server.js  vue.config.js
server/: .crontab  .gitignore  Dockerfile  README.md  pyproject.toml  todo.md
server/scripts/: generate-migration.sh  unittest.sh
server/src/: manage.py
server/src/api/: __init__.py  admin.py  apps.py  constants.py  decorators.py  tasks.py  urls.py
server/src/api/email/: __init__.py  common.py  gsuite.py  sendgrid.py
server/src/api/migrations/: 0001_initial.py  0002_auto_20201226_1852.py  0003_auto_20210114_2332.py  0004_auto_20210115_2345.py  0005_auto_20210117_1854.py  0006_auto_20210118_2049.py  0007_auto_20210118_2237.py  0008_auto_20210123_1516.py  0009_auto_20210123_1945.py  (+10 more)
server/src/backends/: sendgrid.py
server/src/fixtures/: backup.json  basic.json  contest.yaml  contest_type.yaml  crewmember.yaml  genre.yaml  lang.yaml  movie.yaml  movielist.yaml  movies.json  new_releases.yaml  order.yaml  package.yaml  profile.yaml  role.yaml  test_auth.yaml  test_crewrequest.yaml  test_filmography.yaml  test_live_contest_categories.yaml  test_most_recommended.yaml  test_mp_live_genre.yaml  test_submission.yaml  test_top_curators.yaml  user.yaml
server/src/moviepedia/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
server/src/scripts/: server.sh  worker.sh
server/src/templates/: swagger-ui.html
share/: .gitignore  Dockerfile  pyproject.toml
share/share/: __init__.py
(+321 files in other folders)
