[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Zeeshan Khan <zkhan1093@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
djangorestframework = "^3.12.4"
django-filter = "^2.4.0"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.7.0"
sendgrid = "^6.8.0"
razorpay = "^1.2.0"
mysqlclient = "^2.0.3"
pillow = "^9.3.0"
django-import-export = "^2.5.0"
oauth2client = "^4.1.3"
google-auth = "^1.34.0"
google-api-python-client = "^2.15.0"
pandas = "^1.5.3"
django-prometheus = "^2.1.0"
jinja2 = "3.0.1"
whitenoise = "^6.4.0"
celery = {version = "^5.2.7", extras = ["redis"]}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
coverage = "^7.2.2"
pyyaml = "^6.0"
mock = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
