[tool.poetry]
name = "share"
version = "0.1.0"
description = ""
authors = ["Zeeshan Khan <zkhan1093@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2"
gunicorn = "20.0.4"
flask-sqlalchemy = "3.0.2"
mysqlclient = "2.0.3"


[tool.poetry.group.dev.dependencies]
black = "20.8b1"
flake8 = "3.8.4"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
